--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="hint">#bdbdbd</color>
     <color name="light_gray">#D2D7D3</color>
+    <color name="transparent">#D2D7D3</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 </resources>
