--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,26 @@
         android:layout_alignEnd="@+id/button"
         android:layout_marginTop="25dp"
         android:onClick="showLogin"/>
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="@string/login"
+        android:id="@+id/button3"
+        android:layout_below="@+id/button2"
+        android:layout_alignEnd="@+id/button"
+        android:layout_marginTop="25dp"
+        android:onClick="showProductDetails"/>
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Proionta"
+        android:id="@+id/button4"
+        android:layout_below="@+id/button3"
+        android:layout_alignEnd="@+id/button"
+        android:layout_marginTop="25dp"
+        android:onClick="showProducts"/>
+
+
 </RelativeLayout>
