--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="hint">#bdbdbd</color>
+    <color name="light_gray">#D2D7D3</color>
+    <color name="transparent">#D2D7D3</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 </resources>
