--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -209,6 +209,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorPrimary"
+            android:onClick="registerUser"
             android:text="@string/register"
             android:textColor="@color/white"
             android:textStyle="bold" />
