--- a/app/src/main/res/layout/custom_products_row.xml
+++ b/app/src/main/res/layout/custom_products_row.xml
@@ -1,61 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="6dp">
+    android:layout_height="wrap_content"
+    card_view:cardCornerRadius="2dp"
+    card_view:cardElevation="3dp"
+    card_view:cardUseCompatPadding="true">
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="2">
+        android:layout_margin="5dp"
+        android:orientation="vertical"
+        android:padding="5dp">
 
         <ImageView
             android:id="@+id/imgvProductsPhoto"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:contentDescription="@string/content_description"
             android:src="@drawable/ic_action_image"/>
 
+        <TextView
+            android:id="@+id/tvProductsDesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/default_product_short_desc" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp"
+            android:background="@color/light_gray" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <ImageButton
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:contentDescription="@string/content_description"
+                android:src="@drawable/ic_action_add_to_cart" />
+
+            <ImageButton
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:contentDescription="@string/content_description"
+                android:src="@drawable/ic_action_checkout" />
+        </LinearLayout>
+
+        <!--&lt;!&ndash; TextView Employee Name &ndash;&gt;-->
+        <!--<TextView-->
+        <!--android:id="@+id/txt_employee_name"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content" />-->
+
+        <!--&lt;!&ndash; TextView Employee Email &ndash;&gt;-->
+        <!--<TextView-->
+        <!--android:id="@+id/txt_employee_email"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content" />-->
+
+        <!--&lt;!&ndash; TextView Employee Phone &ndash;&gt;-->
+        <!--<TextView-->
+        <!--android:id="@+id/txt_employee_phone"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content" />-->
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tvProductsDesc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/default_product_short_desc" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
-        android:background="@color/light_gray" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="2">
-
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:contentDescription="@string/content_description"
-            android:src="@drawable/ic_action_add_to_cart"/>
-
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:contentDescription="@string/content_description"
-            android:src="@drawable/ic_action_checkout"/>
-    </LinearLayout>
-
-
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
