ADDED:     Cart feature     Chat feature     Hardcoded Data - TO MODIFY

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,4 +34,16 @@
         android:layout_height="wrap_content"
         android:onClick="showProductDetails"
         android:text="@string/products"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="showCart"
+        android:text="@string/cart" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="showChat"
+        android:text="@string/chat" />
 </LinearLayout>
