--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,35 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_private_message"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="gr.homedeco.www.homedeco.PrivateMessage">
+    android:padding="10dp"
+    tools:context="gr.homedeco.www.homedeco.Chat">
+
 
     <ListView
         android:id="@+id/lvPrivateChat"
         android:layout_width="match_parent"
-        android:layout_height="430dp"
+        android:layout_height="0dp"
+        android:layout_weight="0.85"
         android:divider="@color/transparent"
         android:focusable="true"
         android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll"/>
+        android:transcriptMode="alwaysScroll" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/hint" />
-
-
+    <!--<View-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="5dp" />-->
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="0.15">
 
         <ImageButton
             android:id="@+id/imgbSend"
@@ -39,7 +35,7 @@
             android:layout_alignParentEnd="true"
             android:background="@drawable/ic_action_send"
             android:contentDescription="@string/content_description"
-            android:onClick="sendPrivateMessage"/>
+            android:onClick="sendMessage" />
 
 
         <EditText
@@ -49,8 +45,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
             android:layout_toStartOf="@+id/imgbSend"
-            android:hint="@string/message"
-            />
+            android:hint="@string/message" />
 
     </RelativeLayout>
 
