Chat UI changes

--- a/app/src/main/res/layout/custom_chat_bubble2.xml
+++ b/app/src/main/res/layout/custom_chat_bubble2.xml
@@ -2,21 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal"
+    android:weightSum="2">
 
     <Button
         android:id="@+id/bChatBubble2"
-        android:layout_width="220dp"
+        style="@style/TextAppearance.AppCompat.Medium"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="8dp"
+        android:layout_weight="1.2"
         android:background="@drawable/user_chat_bubble"
         android:gravity="center_vertical|start"
         android:paddingBottom="10dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:paddingTop="10dp"
-        android:textColor="@color/black"
-        android:textSize="13sp" />
+        android:textAllCaps="false"
+        android:textColor="@color/black" />
 
 </LinearLayout>
