--- a/app/src/main/res/drawable/user_chat_bubble.xml
+++ b/app/src/main/res/drawable/user_chat_bubble.xml
@@ -2,8 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="3dp" />
-    <solid android:color="#FFFFFF" />
-    <stroke
-        android:width="1dp"
-        android:color="#BDBDBD" />
+    <solid android:color="#F1F0F0" />
 </shape>
