--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     android:padding="10dp"
     tools:context="gr.homedeco.www.homedeco.Chat">
-
 
     <ListView
         android:id="@+id/lvPrivateChat"
@@ -17,10 +17,6 @@
         android:focusable="true"
         android:stackFromBottom="true"
         android:transcriptMode="alwaysScroll" />
-
-    <!--<View-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="5dp" />-->
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -40,6 +36,7 @@
 
         <EditText
             android:id="@+id/etMessage"
+            style="@style/TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
