--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -4,23 +4,26 @@
     android:id="@+id/activity_product_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:weightSum="10"
     tools:context="gr.homedeco.www.homedeco.ProductDetails">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="4">
 
 
         <ImageView
             android:id="@+id/imgvProductPhoto"
             android:layout_width="170dp"
             android:layout_height="170dp"
-            android:contentDescription="@string/content_description"/>
+            android:contentDescription="@string/content_description" />
 
         <TextView
             android:id="@+id/tvProductName"
@@ -28,7 +31,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="30dp"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvProductPrice"
@@ -37,7 +41,7 @@
             android:layout_alignParentEnd="true"
             android:layout_below="@id/tvProductName"
             android:layout_marginTop="5dp"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="#008000"
             android:textStyle="bold" />
 
@@ -48,22 +52,29 @@
         android:layout_height="2dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="-10dp"
         android:background="@color/light_gray" />
 
-    <TextView
-        android:id="@+id/tvProductDesc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:textColor="#6C7A89"
-        android:textStyle="bold" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="5">
+
+        <TextView
+            android:id="@+id/tvProductDesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="#6C7A89" />
+
+    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="15dp"
+        android:layout_weight="1"
         android:orientation="horizontal"
         android:weightSum="2">
 
