--- a/app/src/main/res/layout/custom_chat_bubble.xml
+++ b/app/src/main/res/layout/custom_chat_bubble.xml
@@ -11,6 +11,7 @@
         style="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp"
         android:layout_marginEnd="5dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1.2"
