--- a/app/src/main/res/layout/custom_chat_bubble2.xml
+++ b/app/src/main/res/layout/custom_chat_bubble2.xml
@@ -10,6 +10,7 @@
         style="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1.2"
