--- a/app/src/main/res/layout/custom_products_row.xml
+++ b/app/src/main/res/layout/custom_products_row.xml
@@ -48,7 +48,7 @@
                 android:text="@string/default_product_short_desc"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="#008000"
+                android:textColor="@color/price"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -69,7 +69,7 @@
             android:layout_marginTop="10dp"
             android:text="@string/default_product_short_desc"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="#6C7A89" />
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/tvProductsID"
